# bootcamp_santander

./: 2_tipos_de_dado.py  3_modo_interativo  4_variaveis_e_constantes.py  5_conversao_de_tipos.py  6_funcoes_de_entrada_e_saida.py  7_versionamento_de_codigo.py  8_o_que_e_Git.py  9_o_que_e_Github.py  README.md  desafio_bicletaria.py  ex1.1.py  ex1.4_operadores_logicos.py  ex1.5_operadores_identidade.py  ex1.6_operadores_associacao.py  ex1.7_indentacao_bloco_codigo.py  ex1.8.1_estruturas_aninhadas.py  ex1.8_estruturas_condicionais.py  ex1.9.1_estrutura_while.py  ex1.9.2_estrutura_break&continue.py  ex1.9_estrutura_for.py  ex2.0_string.py  ex2.1_interpolacao.py  ex2.2_fatiameno.py  ex2.3_string_multiplas.py  ex3.0_listas_criacao_acesso.py  ex3.1_listas_metodos.py  ex3.2_tuplas.py  ex3.3_conjuntos_set.py  ex3.4_dicionarios.py  ex4.0_funcoes_1.py  teste.sql
5_orientacao_a_objetos/5.1_introducao_POO/: construtores_destrutores.py
5_orientacao_a_objetos/5.2_aprendendo_heranca/: heranca_multipla.py  heranca_simples.py
5_orientacao_a_objetos/5.3_encapsulamento/: polimorfismo_com_heranca.py  propriedades1.py  propriedades_pessoa.py  recursos_publicos_e_privados.py
6_pacotes_python/: date_datetime.py  decoradores_1.py  decoradores_2.py  geradores.py  timedelta.py
7_manipulacao_arquivo/: arquivo-utf-8.txt  boas_praticas.py  leitora.py  meu_csv.py  os_shutil.py  tratamento_erro.py
7_manipulacao_arquivo/01-Ambiente virtual/: .project.toml.swp  pyproject.toml
8_banco_de_dados/: conexao.py  injecao_sql.py  meu_banco.db  transacao.py
(+3 files in other folders)
