[project]
name = "01 ambiente virtual"
version = "0.1.0"
description = ""
authors = [
    {name = "Raylan Araujo",email = "raylanra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
